# autoclustal

./: .gitignore  LICENSE  MANIFEST.in  README.md  autoclustal.nf  autoclustal.py  copyall.ps1  copyall.sh  create_demo_data.py  environment.yml  example.py  grapher.py  nextflow.config  pyproject.toml  requirements.txt  visualize.py
conf/: base.config  igenomes.config  modules.config  test.config  test_full.config
demo_results/visualizations/: analysis_summary.txt
modules/: __init__.py  alignment.py  analysis.py  blast_search.py  clustering.py  phylogeny.py  sequence_handler.py  simple_analysis.py
